# PrismBB-Drug

./: .dockerignore  .env.example  DEPLOY.md  README.md  docker-compose.yml  render.yaml  requirements.txt
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/agents/: admet_agent.py  conformer_agent.py  parser_agent.py  render_agent.py  toolkit.py
backend/app/models/: schemas.py
backend/app/routes/: docking.py  molecules.py
backend/app/services/: admet_ai_client.py  molecular_docking.py
backend/tests/: test_smoke.py
colab/: PrismBB_Drug.ipynb
flask_frontend/: .dockerignore  Dockerfile  app.py  requirements.txt
flask_frontend/static/css/: style.css
flask_frontend/static/js/: analysis.js  docking.js  main.js  molecular-viewer.js
flask_frontend/templates/: about.html  base.html  docking.html  examples.html  index.html
frontend/: test.html
frontend/src/: App.tsx  index.css
frontend/src/components/: AdmetResults.tsx  MoleculeInput.tsx  MoleculeViewer3D.tsx
scripts/: run.ps1  run.sh  setup.ps1  setup.sh
